--- a/kafka-exporter/.env
+++ b/kafka-exporter/.env
@@ -5,7 +5,9 @@ RELEASE_NAME="my-kafka-exporter"
 # helm的chart版本
 CHART_VERSION="2.12.1"
 # kafka的地址
-KAFKA_SERVER="my-cluster-kafka-bootstrap:9092"
+KAFKA_SERVER_0="my-kafka-cluster-controller-0.my-kafka-cluster-controller-headless.kafka.svc.cluster.local:9092"
+KAFKA_SERVER_1="my-kafka-cluster-controller-1.my-kafka-cluster-controller-headless.kafka.svc.cluster.local:9092"
+KAFKA_SERVER_2="my-kafka-cluster-controller-2.my-kafka-cluster-controller-headless.kafka.svc.cluster.local:9092"
 # 监控的命名空间
 MONITOR_NAMESPACE="monitoring"
 # 监控的release名称
