refactor(kafka-exporter): 更新环境变量注释和状态脚本
- 修改 .env 文件中 Kafka 服务器地址和监控相关环境变量的注释
- 更新 MONITOR_NAMESPACE 和 MONITOR_RELEASE_NAME 变量的注释
- 简化 status.sh 脚本，移除 PVC 查看命令

--- a/kafka-exporter/.env
+++ b/kafka-exporter/.env
@@ -4,11 +4,11 @@ NAMESPACE="kafka"
 RELEASE_NAME="my-kafka-exporter"
 # helm的chart版本
 CHART_VERSION="2.12.1"
-# kafka的地址
+# kafka集群地址
 KAFKA_SERVER_0="my-kafka-cluster-controller-0.my-kafka-cluster-controller-headless.kafka.svc.cluster.local:9092"
 KAFKA_SERVER_1="my-kafka-cluster-controller-1.my-kafka-cluster-controller-headless.kafka.svc.cluster.local:9092"
 KAFKA_SERVER_2="my-kafka-cluster-controller-2.my-kafka-cluster-controller-headless.kafka.svc.cluster.local:9092"
-# 监控的命名空间
+# kube-prometheus-stack的命名空间
 MONITOR_NAMESPACE="monitoring"
-# 监控的release名称
+# kube-prometheus-stack的release名称
 MONITOR_RELEASE_NAME="kube-prom-stack"
