feat(mysql-cluster): 增加 MySQL 从节点副本数量配置
- 在 .env 文件中添加 MYSQL_SECONDARY_REPLICAS 变量
- 设置 MySQL 从节点（secondary）的副本数量为 2

--- a/mysql/mysql-cluster/.env
+++ b/mysql/mysql-cluster/.env
@@ -19,3 +19,6 @@ MYSQL_PASSWORD="YOUR_PASSWORD"
 MYSQL_REPLICATION_USERNAME="replicator"
 # MySQL 复制用户密码
 MYSQL_REPLICATION_PASSWORD="YOUR_PASSWORD"
+
+# MySQL 从节点（secondary）的副本数量
+MYSQL_SECONDARY_REPLICAS=2
