--- a/mysql/mysql-cluster/.env
+++ b/mysql/mysql-cluster/.env
@@ -1,7 +1,7 @@
 # 命名空间
 NAMESPACE="mysql"
 # helm的release名称
-RELEASE_NAME="my-mysql-standalone"
+RELEASE_NAME="my-mysql-cluster"
 # helm的chart版本
 CHART_VERSION="10.3.0"
 # 存储类名称
