--- a/mongo/mongo-standalone/.env
+++ b/mongo/mongo-standalone/.env
@@ -1,3 +1,5 @@
+# .env
+
 # 命名空间
 NAMESPACE="mongo"
 # helm的release名称
@@ -15,3 +17,10 @@ MONGO_DATABASE="test"
 MONGO_USER="lbs"
 # MongoDB 应用用户密码
 MONGO_PASSWORD="YOUR_PASSWORD"
+
+# --- 监控配置 ---
+# Prometheus Operator 所在的命名空间
+PROMETHEUS_NAMESPACE="monitoring"
+# Prometheus Operator 用于发现 ServiceMonitor 的标签值
+# 通常是 kube-prometheus-stack 的 release 名称, 你的 kubectl get all 输出中release名称为 kube-prom-stack
+PROMETHEUS_RELEASE_LABEL_VALUE="kube-prom-stack"
