feat(mongo): 添加 Prometheus 监控配置
- 在 .env 文件中添加监控配置变量 PROMETHEUS_NAMESPACE 和 PROMETHEUS_RELEASE_LABEL_VALUE
- 在 install.sh 中启用 metrics 和 ServiceMonitor，并配置相关参数

--- a/mongo/mongo-cluster/.env
+++ b/mongo/mongo-cluster/.env
@@ -41,3 +41,10 @@ MONGO_DATABASE="test"
 MONGO_USER="lbs"
 # MongoDB 应用用户密码
 MONGO_PASSWORD="YOUR_PASSWORD"
+
+# --- 监控配置 ---
+# Prometheus Operator 所在的命名空间
+PROMETHEUS_NAMESPACE="monitoring"
+# Prometheus Operator 用于发现 ServiceMonitor 的标签值
+# 通常是 kube-prometheus-stack 的 release 名称, 你的 kubectl get all 输出中release名称为 kube-prom-stack
+PROMETHEUS_RELEASE_LABEL_VALUE="kube-prom-stack"
