feat(kafka): 集成 prometheus 监控
- 在 kafka-cluster 中添加 prometheus 监控相关配置
- 移除独立的 kafka-exporter 相关文件
- 更新 kafka-cluster 的安装脚本和 README 文档

--- a/kafka/kafka-cluster/.env
+++ b/kafka/kafka-cluster/.env
@@ -1,3 +1,5 @@
+# .env
+
 # 命名空间
 NAMESPACE="kafka"
 # helm的release名称
@@ -6,3 +8,8 @@ RELEASE_NAME="my-kafka-cluster"
 CHART_VERSION="32.2.8"
 # 存储类名称
 STORAGE_CLASS_NAME="nfs"
+
+# Prometheus 监控组件所在的命名空间
+PROMETHEUS_NAMESPACE="monitoring"
+# Prometheus Operator 用于发现 ServiceMonitor 的标签值 (通常是 helm release 的名称)
+PROMETHEUS_RELEASE_LABEL="kube-prom-stack"
