refactor(mysql): 重构 MySQL相关脚本和文档
- 移除 mysql-exporter 相关的安装脚本和文档
- 重命名 mysql-cluster 目录为 mysql-replication
- 更新安装脚本和文档，增加 Prometheus 监控相关配置
- 调整验证步骤，增加监控验证部分

--- a/mysql/mysql-replication/.env
+++ b/mysql/mysql-replication/.env
@@ -1,7 +1,7 @@
 # 命名空间
 NAMESPACE="mysql"
 # helm的release名称
-RELEASE_NAME="my-mysql-cluster"
+RELEASE_NAME="my-mysql-replication"
 # helm的chart版本
 CHART_VERSION="10.3.0"
 # 存储类名称
@@ -22,3 +22,8 @@ MYSQL_REPLICATION_PASSWORD="YOUR_PASSWORD"
 
 # MySQL 从节点（secondary）的副本数量
 MYSQL_SECONDARY_REPLICAS=2
+
+# Prometheus 监控组件所在的命名空间
+PROMETHEUS_NAMESPACE="monitoring"
+# Prometheus Operator 用于发现 ServiceMonitor 的标签值 (通常是 helm release 的名称)
+PROMETHEUS_RELEASE_LABEL="kube-prom-stack"
