refactor(redis): 移除 redis-exporter 相关文件
- 删除了 redis-exporter 的 install.sh、README.md、status.sh 和 uninstall.sh 文件
- 在 redis-cluster 中添加了 Prometheus 监控配置
- 更新了 redis-cluster 的 install.sh 和 README.md，增加了监控验证步骤
- 更新了 mongo 和 mysql相关文件，统一了 Prometheus配置变量名称

--- a/mysql/mysql-standalone/.env
+++ b/mysql/mysql-standalone/.env
@@ -15,3 +15,8 @@ MYSQL_DATABASE="test"
 MYSQL_USER="lbs"
 # MySQL 用户密码
 MYSQL_PASSWORD="YOUR_PASSWORD"
+
+# Prometheus 监控组件所在的命名空间
+PROMETHEUS_NAMESPACE="monitoring"
+# Prometheus Operator 用于发现 ServiceMonitor 的标签值 (通常是 helm release 的名称)
+PROMETHEUS_RELEASE_LABEL="kube-prom-stack"
