--- a/redis/redis-cluster/.env
+++ b/redis/redis-cluster/.env
@@ -8,3 +8,8 @@ CHART_VERSION="12.0.6"
 STORAGE_CLASS_NAME="nfs"
 # redis密码
 REDIS_PASSWORD="YOUR_PASSWORD"
+
+# Prometheus 监控组件所在的命名空间
+PROMETHEUS_NAMESPACE="monitoring"
+# Prometheus Operator 用于发现 ServiceMonitor 的标签值 (通常是 helm release 的名称)
+PROMETHEUS_RELEASE_LABEL="kube-prom-stack"
