--- a/mongodb/mongodb-replica/.env
+++ b/mongodb/mongodb-replica/.env
@@ -1,7 +1,7 @@
 # 命名空间
 NAMESPACE="mongo"
 # helm的release名称
-RELEASE_NAME="my-mongo-cluster"
+RELEASE_NAME="my-mongo-replica"
 # helm chart版本
 CHART_VERSION="16.5.20"
 # 存储类名称
