perf(kafka): 调整 Kafka 控制器和度量资源限制
- 增加控制器副本数量环境变量
- 调整控制器和度量组件的 CPU 和内存限制
- 在安装脚本中添加 RBAC 创建配置

--- a/kafka/kafka-cluster/.env
+++ b/kafka/kafka-cluster/.env
@@ -8,6 +8,8 @@ RELEASE_NAME="my-kafka-cluster"
 CHART_VERSION="32.2.8"
 # 存储类名称
 STORAGE_CLASS_NAME="nfs"
+# controller节点数量
+CONTROLLER_REPLICA_COUNT=3
 
 # Prometheus 监控组件所在的命名空间
 PROMETHEUS_NAMESPACE="monitoring"
