--- a/kafka/kafka-standalone/.env
+++ b/kafka/kafka-standalone/.env
@@ -1,13 +1,15 @@
 # .env
 
-# 命名空间 (可以与集群版使用同一个，因为 Release 名称不同)
+# 命名空间
 NAMESPACE="kafka"
-# helm的release名称 (必须与集群版不同)
+# helm的release名称
 RELEASE_NAME="my-kafka-standalone"
 # helm的chart版本
 CHART_VERSION="32.2.8"
 # 存储类名称
 STORAGE_CLASS_NAME="nfs"
+# controller节点数量
+CONTROLLER_REPLICA_COUNT=1
 
 # Prometheus 监控组件所在的命名空间
 PROMETHEUS_NAMESPACE="monitoring"
