refactor(nginx): 修改 Helm release 名称
- 将 nginx-cluster 的 RELEASE_NAME 从 "my-nginx" 改为 "my-nginx-cluster"
- 将 nginx-standalone 的 RELEASE_NAME 从 "my-nginx" 改为 "my-nginx-standalone"
- 这样可以更好地区分集群和独立部署的 Helm release

--- a/nginx/nginx-standalone/.env
+++ b/nginx/nginx-standalone/.env
@@ -1,7 +1,7 @@
 # 命名空间
 NAMESPACE="nginx"
 # helm的release名称
-RELEASE_NAME="my-nginx"
+RELEASE_NAME="my-nginx-standalone"
 # helm的chart版本
 CHART_VERSION="20.1.0"
 
