--- a/nginx/.env
+++ b/nginx/.env
@@ -1,7 +1,7 @@
 # 命名空间
 NAMESPACE="nginx"
 # helm的release名称
-RELEASE_NAME="my-nginx-cluster"
+RELEASE_NAME="my-nginx"
 # helm的chart版本
 CHART_VERSION="20.1.0"
 
