refactor(flink): 重命名 Flink Session 部署示例文件并添加 Ingress 配置
- 将 basic-session-deployment-and-job.yaml 重命名为 lbs-session-deployment-and-job.yaml
- 添加 Ingress 配置，包括模板、类名和重写目标注解
- 设置命名空间为 flink

--- a/flink/session/lbs-session-deployment-and-job.yaml
+++ b/flink/session/lbs-session-deployment-and-job.yaml
@@ -19,10 +19,16 @@
 apiVersion: flink.apache.org/v1beta1
 kind: FlinkDeployment
 metadata:
+  namespace: flink
   name: basic-session-deployment-example
 spec:
   image: flink:1.20
   flinkVersion: v1_20
+  ingress:
+    template: "flink.k8s.io/{{namespace}}/{{name}}(/|$)(.*)"
+    className: "nginx"
+    annotations:
+      nginx.ingress.kubernetes.io/rewrite-target: "/$2"
   jobManager:
     resource:
       memory: "2048m"
