--- a/flink/session/lbs-session-deployment-and-job.yaml
+++ b/flink/session/lbs-session-deployment-and-job.yaml
@@ -42,6 +42,7 @@ spec:
 apiVersion: flink.apache.org/v1beta1
 kind: FlinkSessionJob
 metadata:
+  namespace: flink
   name: basic-session-job-example
 spec:
   deploymentName: basic-session-deployment-example
@@ -54,6 +55,7 @@ spec:
 apiVersion: flink.apache.org/v1beta1
 kind: FlinkSessionJob
 metadata:
+  namespace: flink
   name: basic-session-job-example2
 spec:
   deploymentName: basic-session-deployment-example
