build(nexus3): 更新 Helm Chart 版本并设置副本数
- 将 Helm Chart 版本从 82.0.0 降至 5.11.0
- 添加 REPLICAS环境变量以设置 Nexus节点数
- 在 install.sh 中应用新的副本数设置

--- a/nexus3/.env
+++ b/nexus3/.env
@@ -3,7 +3,10 @@ NAMESPACE="nexus"
 # Helm Release 名称
 RELEASE_NAME="nexus"
 # Helm Chart 版本 (请根据需要使用最新稳定版)
-CHART_VERSION="82.0.0"
+CHART_VERSION="5.11.0"
+
+# Nexus 节点数
+REPLICAS=1
 
 # 持久化存储的 StorageClass 名称
 STORAGE_CLASS_NAME="nfs"
