--- a/jenkins/.env
+++ b/jenkins/.env
@@ -13,5 +13,5 @@ STORAGE_CLASS_NAME="nfs"
 INGRESS_CLASS_NAME="nginx"
 # Jenkins的域名
 JENKINS_HOST="jenkins.lbs.com"
-# Jenkins的admin用户密码 (请务必修改为一个强密码)
+# Jenkins的user用户密码 (请务必修改为一个强密码)
 JENKINS_ADMIN_PASSWORD="YOUR_PASSWORD"
