--- a/flink/session/lbs-session-deployment-and-job.yaml
+++ b/flink/session/lbs-session-deployment-and-job.yaml
@@ -25,7 +25,7 @@ spec:
   image: flink:1.20
   flinkVersion: v1_20
   ingress:
-    template: "flink.k8s.io/{{namespace}}/{{name}}(/|$)(.*)"
+    template: "flink.lbs.com/{{namespace}}/{{name}}(/|$)(.*)"
     className: "nginx"
     annotations:
       nginx.ingress.kubernetes.io/rewrite-target: "/$2"
