refactor(nfs-subdir-external-provisioner): 重构参数配置方式
- 将特有配置替换为参数配置
- 使用 HELM_SET_ARGS 变量统一管理所有配置参数
- 更新 install.sh 脚本以适应新的参数配置方式
- 优化代码结构，提高可维护性和可扩展性

--- a/nfs-subdir-external-provisioner/.env.example
+++ b/nfs-subdir-external-provisioner/.env.example
@@ -10,16 +10,13 @@ NAMESPACE="kube-system"
 RELEASE_NAME="nfs-subdir-external-provisioner"
 
 #------------------------------------------------#
-# 特有配置
+# 参数配置
 #------------------------------------------------#
 
-# nfs服务地址
-NFS_SERVER="master"
-# nfs存储路径
-NFS_PATH="/data/nfs/k8s"
-# 存储类名称
-STORAGE_CLASS_NAME="nfs"
-# 是否设置为默认存储类
-DEFAULT_CLASS="true"
-# 是否使用rbac
-RBAC="true"
+HELM_SET_ARGS="
+--set nfs.server=master
+--set nfs.path=/data/nfs/k8s
+--set storageClass.name=nfs
+--set storageClass.defaultClass=true
+--set rbac.create=true
+"
