refactor(install): 优化 NFS 子目录外部供应器的安装脚本
- 修改 .env.example 中的 HELM_SET_ARGS 配置，使用反斜杠换行
- 移除 install.sh 中的字符串解析为数组的步骤
- 直接使用 HELM_ARGS_ARRAY 变量，简化安装命令

--- a/nfs-subdir-external-provisioner/.env.example
+++ b/nfs-subdir-external-provisioner/.env.example
@@ -14,9 +14,9 @@ RELEASE_NAME="nfs-subdir-external-provisioner"
 #------------------------------------------------#
 
 HELM_SET_ARGS="
---set nfs.server=master
---set nfs.path=/data/nfs/k8s
---set storageClass.name=nfs
---set storageClass.defaultClass=true
+--set nfs.server=master \
+--set nfs.path=/data/nfs/k8s \
+--set storageClass.name=nfs \
+--set storageClass.defaultClass=true \
 --set rbac.create=true
 "
