--- a/nfs-subdir-external-provisioner/.env.example
+++ b/nfs-subdir-external-provisioner/.env.example
@@ -13,10 +13,10 @@ RELEASE_NAME="nfs-subdir-external-provisioner"
 # 参数配置
 #------------------------------------------------#
 
-HELM_SET_ARGS="
---set nfs.server=master \
---set nfs.path=/data/nfs/k8s \
---set storageClass.name=nfs \
---set storageClass.defaultClass=true \
---set rbac.create=true
-"
+HELM_SET_ARGS=(
+  "--set nfs.server=master"
+  "--set nfs.path=/data/nfs/k8s"
+  "--set storageClass.name=nfs"
+  "--set storageClass.defaultClass=true"
+  "--set rbac.create=true"
+)
