docs: 更新监控组件配置示例
- 在多个 values-example.yml 文件中，将 labels 字段更改为 additionalLabels
- 此修改适用于 mysql-replication、mysql-standalone、redis-cluster、redis-sentinel 和 redis-standalone 的配置示例
- 更新后的配置示例将与 Prometheus Operator 的最新版本兼容

--- a/mysql/mysql-standalone/values-example.yml
+++ b/mysql/mysql-standalone/values-example.yml
@@ -55,7 +55,7 @@ metrics:
     enabled: true
     # Prometheus 监控组件所在的命名空间
     namespace: monitoring
-    labels:
+    additionalLabels:
       # Prometheus Operator 用于发现 ServiceMonitor 的标签值
       release: kube-prom-stack
   resources:
