docs: 更新 Prometheus 监控配置示例
- 在 Redis集群、哨兵和独立部署的 values-example.yml 文件中添加 metrics.service.enabled 配置
- 更新 MySQL 独立部署的 values-example.yml 文件，将 serviceMonitor.additionalLabels 改为 serviceMonitor.labels
- 优化配置文件格式，提高可读性和一致性

--- a/redis/redis-sentinel/values-example.yml
+++ b/redis/redis-sentinel/values-example.yml
@@ -71,6 +71,8 @@ rbac:
 # Metrics (监控) 配置
 metrics:
   enabled: true
+  service:
+    enabled: true
   # Prometheus ServiceMonitor 配置
   serviceMonitor:
     enabled: true
