--- a/redis/redis-cluster/values-example.yml
+++ b/redis/redis-cluster/values-example.yml
@@ -44,6 +44,8 @@ rbac:
 metrics:
   # 是否启用指标导出
   enabled: true
+  service:
+    enabled: true
   # ServiceMonitor 配置 (用于 Prometheus Operator)
   serviceMonitor:
     # 是否启用 ServiceMonitor
