--- a/redis/redis-cluster/values-example.yml
+++ b/redis/redis-cluster/values-example.yml
@@ -44,8 +44,6 @@ rbac:
 metrics:
   # 是否启用指标导出
   enabled: true
-  service:
-    enabled: true
   # ServiceMonitor 配置 (用于 Prometheus Operator)
   serviceMonitor:
     # 是否启用 ServiceMonitor
@@ -53,7 +51,7 @@ metrics:
     # Prometheus 监控组件所在的命名空间
     namespace: monitoring
     # Prometheus Operator 用于发现 ServiceMonitor 的标签值
-    additionalLabels:
+    labels:
       release: kube-prom-stack
   # 指标导出器资源限制与请求
   resources:
