feat(redis-cluster): 增加 prometheusService 的 selector 字段
- 在 redis-cluster 的 values-example.yml 文件中，为 prometheusService 添加 selector 字段
- 指定 release 为 kube-prom-stack，以精确匹配 Prometheus 服务

--- a/redis/redis-cluster/values-example.yml
+++ b/redis/redis-cluster/values-example.yml
@@ -50,6 +50,8 @@ metrics:
     enabled: true
     # Prometheus 监控组件所在的命名空间
     namespace: monitoring
+    selector:
+      release: kube-prom-stack
     # Prometheus Operator 用于发现 ServiceMonitor 的标签值
     labels:
       release: kube-prom-stack
