docs(ingress-nginx): 更新 values-example.yml 示例配置
- 将 replicaCount 配置从根级别移动到 controller 下
- 此修改更好地反映了 Ingress Controller副本数量的配置方式

--- a/ingress-nginx/values-example.yml
+++ b/ingress-nginx/values-example.yml
@@ -34,5 +34,5 @@ controller:
     #   metallb.universe.tf/load-balancer-ip: "192.168.5.200"
 
 # --- 你可以添加以下配置来控制 Deployment 的副本数量 ---
-replicaCount: 2 # 例如，运行 2 个 Ingress Controller 实例以实现高可用
+controller.replicaCount: 2 # 例如，运行 2 个 Ingress Controller 实例以实现高可用
 
