--- a/harbor/values-example.yml
+++ b/harbor/values-example.yml
@@ -17,7 +17,7 @@ adminPassword: "YOUR_PASSWORD" # <-- 修改这里
 
 ## Harbor 的外部访问 URL。这个 URL 用于UI显示、API调用和 Docker/Helm 客户端交互。
 ## 协议必须是 https，域名必须与下面的 ingress.core.hostname 保持一致。
-externalURL: https://harbor.yourdomain.com # <-- 修改这里
+externalURL: https://harbor.lbs.com # <-- 修改这里
 
 # ------------------------------------------------------------------
 # 2. 流量暴露配置：使用 Ingress-NGINX
@@ -34,12 +34,12 @@ ingress:
 
     ## Ingress 的主机名，必须与上面的 externalURL 匹配。
     ## 你需要为此域名创建一条 DNS A 记录，指向你的 Ingress Controller 的外部 IP (由 MetalLB 提供)。
-    hostname: harbor.yourdomain.com # <-- 修改这里
+    hostname: harbor.lbs.com # <-- 修改这里
 
     ## 为此 Ingress 启用 TLS (HTTPS)。
     tls: true
     # 注意: 启用 tls 后，你需要提供一个有效的 TLS 证书。
-    # 你可以手动创建一个名为 "harbor.yourdomain.com-tls" 的 Secret，
+    # 你可以手动创建一个名为 "harbor.lbs.com-tls" 的 Secret，
     # 或者使用 cert-manager 并通过下面的 annotations 自动申请证书。
     
     ## Ingress annotations. 下面的配置适用于 ingress-nginx。
