--- a/flink/session/lbs-session-deployment-and-job.yaml
+++ b/flink/session/lbs-session-deployment-and-job.yaml
@@ -1,34 +1,11 @@
-################################################################################
-#  Licensed to the Apache Software Foundation (ASF) under one
-#  or more contributor license agreements.  See the NOTICE file
-#  distributed with this work for additional information
-#  regarding copyright ownership.  The ASF licenses this file
-#  to you under the Apache License, Version 2.0 (the
-#  "License"); you may not use this file except in compliance
-#  with the License.  You may obtain a copy of the License at
-#
-#      http://www.apache.org/licenses/LICENSE-2.0
-#
-#  Unless required by applicable law or agreed to in writing, software
-#  distributed under the License is distributed on an "AS IS" BASIS,
-#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-#  See the License for the specific language governing permissions and
-# limitations under the License.
-################################################################################
-
-apiVersion: flink.apache.org/v1beta1
+---
+piVersion: flink.apache.org/v1beta1
 kind: FlinkDeployment
 metadata:
-  namespace: flink
   name: basic-session-deployment-example
 spec:
   image: flink:1.20
   flinkVersion: v1_20
-  ingress:
-    template: "flink.lbs.com/{{namespace}}/{{name}}(/|$)(.*)"
-    className: "nginx"
-    annotations:
-      nginx.ingress.kubernetes.io/rewrite-target: "/$2"
   jobManager:
     resource:
       memory: "2048m"
@@ -42,7 +19,6 @@ spec:
 apiVersion: flink.apache.org/v1beta1
 kind: FlinkSessionJob
 metadata:
-  namespace: flink
   name: basic-session-job-example
 spec:
   deploymentName: basic-session-deployment-example
@@ -55,7 +31,6 @@ spec:
 apiVersion: flink.apache.org/v1beta1
 kind: FlinkSessionJob
 metadata:
-  namespace: flink
   name: basic-session-job-example2
 spec:
   deploymentName: basic-session-deployment-example
