refactor(flink): 为 Flink 部署和作业示例添加命名空间
为以下 Flink 示例文件添加了命名空间：- lbs-session-deployment-and-job.yaml
- lbs-session-deployment-only.yaml
- lbs-session-job-only.yaml这些文件中的资源现在将被创建在 "flink" 命名空间中，而不是默认的命名空间。

--- a/flink/session/lbs-session-deployment-only.yaml
+++ b/flink/session/lbs-session-deployment-only.yaml
@@ -2,6 +2,7 @@
 apiVersion: flink.apache.org/v1beta1
 kind: FlinkDeployment
 metadata:
+  namespace: flink
   name: session-only-example
 spec:
   image: flink:1.20
