--- a/flink/session/lbs-session-deployment-and-job.yaml
+++ b/flink/session/lbs-session-deployment-and-job.yaml
@@ -2,6 +2,7 @@
 piVersion: flink.apache.org/v1beta1
 kind: FlinkDeployment
 metadata:
+  namespace: flink
   name: basic-session-deployment-example
 spec:
   image: flink:1.20
@@ -19,6 +20,7 @@ spec:
 apiVersion: flink.apache.org/v1beta1
 kind: FlinkSessionJob
 metadata:
+  namespace: flink
   name: basic-session-job-example
 spec:
   deploymentName: basic-session-deployment-example
@@ -31,6 +33,7 @@ spec:
 apiVersion: flink.apache.org/v1beta1
 kind: FlinkSessionJob
 metadata:
+  namespace: flink
   name: basic-session-job-example2
 spec:
   deploymentName: basic-session-deployment-example
