--- a/flink/session/lbs-session-job-only.yaml
+++ b/flink/session/lbs-session-job-only.yaml
@@ -2,6 +2,7 @@
 apiVersion: flink.apache.org/v1beta1
 kind: FlinkSessionJob
 metadata:
+  namespace: flink
   name: session-only-example
 spec:
   deploymentName: basic-session-deployment-only-example
