refactor(flink): 更新 Ingress template 以匹配特定域名
- 将 Ingress template 从 "flink.k8s.io/{{namespace}}/{{name}}(/|$)(.*)"
  修改为 "flink.lbs.com/{{namespace}}/{{name}}(/|$)(.*)"
- 此修改是为了匹配特定的域名要求

--- a/flink/session/lbs-session-deployment-only.yaml
+++ b/flink/session/lbs-session-deployment-only.yaml
@@ -9,7 +9,7 @@ spec:
   flinkVersion: v1_20
   imagePullPolicy: IfNotPresent
   ingress:
-    template: "flink.k8s.io/{{namespace}}/{{name}}(/|$)(.*)"
+    template: "flink.lbs.com/{{namespace}}/{{name}}(/|$)(.*)"
     className: "nginx"
     annotations:
       nginx.ingress.kubernetes.io/rewrite-target: "/$2"
