refactor(nexus3):调整环境变量和脚本中的密码密钥处理
- 将 PASSWORD_SECRET_NAME 添加到 .env.example 文件中，作为可配置项
- 从 install.sh 中移除硬编码的 PASSWORD_SECRET_NAME 和 NEXUS_ADMIN_PASSWORD
- 在 uninstall.sh 中增加删除密码密钥的逻辑

--- a/nexus3/.env.example
+++ b/nexus3/.env.example
@@ -13,5 +13,7 @@ RELEASE_NAME="nexus"
 # 特有配置
 #------------------------------------------------#
 
+# 密码密钥名称
+PASSWORD_SECRET_NAME="nexus-secret"
 # 请务必替换为你的实际密码 !!!
 NEXUS_ADMIN_PASSWORD="YOUR_PASSWORD"
