conf(ingress-nginx):调整文件传输大小限制
- 将 proxy-body-size 从 "1024m" 修改为 "20M"
- 优化文件传输性能，防止过大文件导致的性能问题

--- a/ingress-nginx/values-example.yml
+++ b/ingress-nginx/values-example.yml
@@ -3,7 +3,7 @@ controller:
   kind: Deployment
   config:
     # 文件传输大小限制
-    proxy-body-size: "1024m"
+    proxy-body-size: "20M"
   service:
     # 启用外部控制器服务，这将是 MetalLB 负载均衡器暴露的服务
     enabled: true
