feat(nexus3): 增加 Ingress 注解支持大文件传输
- 在 values-example.yml 中添加 nginx.ingress.kubernetes.io/proxy-body-size 注解
- 设置代理服务器允许的最大文件大小为 10G

--- a/nexus3/values-example.yml
+++ b/nexus3/values-example.yml
@@ -16,6 +16,8 @@ persistence:
 # Ingress 配置
 ingress:
   enabled: true
+  annotations:
+    nginx.ingress.kubernetes.io/proxy-body-size: "10G"
   # Ingress Controller 的 Class 名称 (例如：nginx)
   ingressClassName: "nginx"
   # Nexus UI 访问域名
