docs(nexus3): 更新 values-example.yml 示例文件
- 在 ingress配置中添加 nginx 文件传输大小限制的注释
- 优化注释内容，明确 ingress Controller 的 Class 名称配置位置

--- a/nexus3/values-example.yml
+++ b/nexus3/values-example.yml
@@ -17,6 +17,7 @@ persistence:
 ingress:
   enabled: true
   annotations:
+    # nginx文件传输大小限制
     nginx.ingress.kubernetes.io/proxy-body-size: "10G"
   # Ingress Controller 的 Class 名称 (例如：nginx)
   ingressClassName: "nginx"
