refactor(ingress-nginx): 调整文件传输大小限制
- 将 ingress-nginx 的 proxy-body-size 从 20M 修改为 10G
- 注释掉 nexus3 ingress 中的 proxy-body-size 设置

--- a/nexus3/values-example.yml
+++ b/nexus3/values-example.yml
@@ -16,9 +16,9 @@ persistence:
 # Ingress 配置
 ingress:
   enabled: true
-  annotations:
-    # nginx文件传输大小限制
-    nginx.ingress.kubernetes.io/proxy-body-size: "10G"
+#  annotations:
+#    # nginx文件传输大小限制
+#    nginx.ingress.kubernetes.io/proxy-body-size: "10G"
   # Ingress Controller 的 Class 名称 (例如：nginx)
   ingressClassName: "nginx"
   # Nexus UI 访问域名
