refactor(ingress-nginx): 注释掉控制器的指标导出配置
- 通过在 values-example.yml 文件中注释掉 metrics配置部分，禁用了控制器的指标导出功能
- 此修改可能会影响 Prometheus 的数据抓取，需确保其他监控解决方案到位

--- a/ingress-nginx/values-example.yml
+++ b/ingress-nginx/values-example.yml
@@ -35,12 +35,12 @@ controller:
     #   memory: 500Mi
 
   # 建议为控制器启用指标导出，以便 Prometheus 抓取
-  metrics:
-    enabled: true
-    service:
-      enabled: true
-    serviceMonitor:
-      enabled: true
-      namespace: monitoring
-      additionalLabels:
-        release: kube-prom-stack
+#  metrics:
+#    enabled: true
+#    service:
+#      enabled: true
+#    serviceMonitor:
+#      enabled: true
+#      namespace: monitoring
+#      additionalLabels:
+#        release: kube-prom-stack
