refactor(example): 更新 LBS 示例应用配置
- 将 hostname 参数从 IP 地址改为 master，以适应更多部署环境
- 删除 port 参数，可能不再需要或将在其他地方配置

--- a/flink/example/application/lbs-application-final-example.yaml
+++ b/flink/example/application/lbs-application-final-example.yaml
@@ -74,7 +74,7 @@ spec:
     entryClass: com.liboshuai.demo.FlinkWordCountDemo
     args:   # 传递到作业main方法的参数
       - "--hostname"
-      - "192.168.6.149"
+      - "master"
       - "--port"
       - "9999"
     parallelism: 1
