docs(flink/operator): 更新 .env.example 文件中的注释
- 在 .env.example 文件中添加了关于 OPERATOR_VERSION 的详细注释
- 为用户提供了版本选择的参考链接

--- a/flink/operator/.env.example
+++ b/flink/operator/.env.example
@@ -2,7 +2,7 @@
 # 通用配置
 #------------------------------------------------#
 
-# operator版本
+# operator版本（可以到`https://downloads.apache.org/flink/`中查看选择版本）
 OPERATOR_VERSION="1.11.0"
 # 命名空间
 NAMESPACE="flink"
