docs(sonarqube): 更新 values-example.yml 示例文件
-将 sonarqubePassword 的示例值从 "your-strong-password" 修改为 "YOUR_PASSWORD"
- 此修改旨在提供更清晰的示例，帮助用户在配置文件中设置强密码

--- a/sonarqube/values-example.yml
+++ b/sonarqube/values-example.yml
@@ -5,7 +5,7 @@
 # SonarQube 管理员密码。
 # 默认用户名为 'admin'，强烈建议修改此密码。
 # 如果留空，首次部署后可获取随机生成的密码。
-sonarqubePassword: "your-strong-password"
+sonarqubePassword: "YOUR_PASSWORD"
 
 # SonarQube 主进程的 JVM 堆大小配置。
 # 请根据您的服务器能力和预期负载进行调整。
