--- a/sonarqube/values-example.yml
+++ b/sonarqube/values-example.yml
@@ -2,6 +2,8 @@
 # SonarQube Helm Chart 自定义配置文件
 # -------------------------------------------------------------------
 
+# 注意：下面的关于内存的资源设定，都已经是最小值了，无法再次调低，否则无法启动。
+
 # SonarQube 管理员密码。
 # 默认用户名为 'admin'，强烈建议修改此密码。
 # 如果留空，首次部署后可获取随机生成的密码。
