docs(flink): 更新 values-example.yml 配置示例
-将 replicas 注释从"副本数大于等于2"改为"开启高可用"
- 在文件中添加新的注释"开启高可用"以说明高可用配置

--- a/flink/operator/values-example.yml
+++ b/flink/operator/values-example.yml
@@ -1,4 +1,4 @@
-# 副本数大于等于2
+# 开启高可用
 replicas: 2
 
 # 配置时区
@@ -24,6 +24,7 @@ defaultConfiguration:
     kubernetes.operator.reconcile.interval: 60 s
     kubernetes.operator.reconcile.parallelism: 30
     kubernetes.operator.observer.progress-check.interval: 5 s
+    # 开启高可用
     kubernetes.operator.leader-election.enabled: true
     kubernetes.operator.leader-election.lease-name: flink-operator-lease
 
