docs(operator): 更新 Flink Kubernetes Operator 配置示例
- 移除了 defaultConfiguration 中的 create 和 append 参数
- 添加了参数配置的注释说明
- 保留了其他配置不变

--- a/flink/operator/values-example.yml
+++ b/flink/operator/values-example.yml
@@ -13,13 +13,12 @@ jvmArgs:
   operator: "-Xms1024m -Xmx1024m"
 
 defaultConfiguration:
-  create: true
-  append: true
   flink-conf.yaml: |+
     # Flink Config Overrides
     kubernetes.operator.metrics.reporter.slf4j.factory.class: org.apache.flink.metrics.slf4j.Slf4jReporterFactory
     kubernetes.operator.metrics.reporter.slf4j.interval: 5 MINUTE
 
+    # 参数配置（其他参数参考`flink-kubernetes-operator/conf/flink-conf.yaml`）
     kubernetes.operator.flink.client.timeout: 30 s
     kubernetes.operator.reconcile.interval: 60 s
     kubernetes.operator.reconcile.parallelism: 30
