--- a/flink/example/session/lbs-session-deployment-only.yaml
+++ b/flink/example/session/lbs-session-deployment-only.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: flink
   name: session-only-example
 spec:
-  image: flink:1.18
+  image: flink:1.18.0-scala_2.12-java8
   flinkVersion: v1_18
   imagePullPolicy: IfNotPresent
   ingress:
