--- a/flink/example/pod-template.yaml
+++ b/flink/example/pod-template.yaml
@@ -4,7 +4,7 @@ kind: FlinkDeployment
 metadata:
   name: pod-template-example
 spec:
-  image: flink:1.18
+  image: flink:1.18.0-scala_2.12-java8
   flinkVersion: v1_18
   flinkConfiguration:
     taskmanager.numberOfTaskSlots: "2"
