build: 更新 Flink 镜像版本
- 将 Flink 镜像从 1.18.0-scala_2.12-java8 修改为1.18.0-java8

--- a/flink/example/session/lbs-session-deployment-and-job.yaml
+++ b/flink/example/session/lbs-session-deployment-and-job.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: flink
   name: basic-session-deployment-example
 spec:
-  image: flink:1.18.0-scala_2.12-java8
+  image: flink:1.18.0-java8
   flinkVersion: v1_18
   jobManager:
     resource:
