--- a/flink/example/application/application-example.yml
+++ b/flink/example/application/application-example.yml
@@ -6,7 +6,7 @@ metadata:
   namespace: flink
   name: application-deployment-checkpoint-ha  # flink 集群名称
 spec:
-  image: flink:1.18.0-scala_2.12-java8
+  image: flink:1.18.0-java8
   flinkVersion: v1_18
   imagePullPolicy: IfNotPresent
   ingress:
