build(flink): 更新 Flink镜像版本
- 将 Flink 镜像从 flink-hdfs:1.18.0-scala_2.12-java8 修改为 flink-hdfs:flink:1.18.0-java8
- 修正镜像版本以确保与 Flink 1.18.0 兼容

--- a/flink/example/application/historyserver-conf.yml
+++ b/flink/example/application/historyserver-conf.yml
@@ -17,7 +17,7 @@ data:
     taskmanager.rpc.port: 6122
     kubernetes.service-account: flink
     kubernetes.cluster-id: flink-historyserver
-    kubernetes.container.image: flink-hdfs:1.18.0-scala_2.12-java8
+    kubernetes.container.image: flink-hdfs:flink:1.18.0-java8
     parallelism.default: 2
     kubernetes.namespace: flink
     taskmanager.numberOfTaskSlots: 2
