build(historyserver): 更新 Flink历史服务器示例的 Docker 镜像版本
-将 flink:1.18.0-java8.0-scala_2.12-java8镜像更新为 flink:1.18.0-java8
- 此更改简化了 Docker 镜像版本，提高了可维护性

--- a/flink/example/application/historyserver-example.yml
+++ b/flink/example/application/historyserver-example.yml
@@ -33,7 +33,7 @@ spec:
           env:
             - name: TZ
               value: Asia/Shanghai
-          image: flink:1.18.0-java8.0-scala_2.12-java8
+          image: flink:1.18.0-java8
           command: [ 'sh','-c','/docker-entrypoint.sh history-server' ]
           ports:
             - containerPort: 8082
